# esp32c6-Keyword-Spotting

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  sdkconfig  sdkconfig.defaults
edge-impulse-sdk/porting/: ei_classifier_porting.h
main/: CMakeLists.txt  light.cpp  light.h  main.cpp  main.h  nvsinit.cpp  nvsinit.h  pipelinefunctions.cpp  pipelinefunctions.h
model-parameters/: model_metadata.h  model_variables.h
tflite-model/: tflite_learn_51_compiled.cpp  tflite_learn_51_compiled.h
